# LOGL

./: .gitignore  CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: shader.fs.glsl  shader.vs.glsl
src/: Shader.cpp  Shader.h  main.cpp
